# ct_spiders

./: .gitignore  Dockerfile  pyproject.toml
.github/workflow/: main.yaml
.github/workflows/: main.yaml
ct_spider_i/: celery.py  scrapy.cfg  tasks.py
ct_spider_i/ct_spider_i/: items.py  middlewares.py  pipelines.py  settings.py
ct_spider_i/ct_spider_i/spiders/: HoboSpider.py  Newsghana1Spider.py  PrimenewsSpider.py
ct_spider_i/kafka/: __init__.py  producer.py
